@@ -78,7 +78,7 @@ class ExpressionSearchScript implements SearchScript {
             }
 
             @Override
-            public Object run() { return new Double(evaluate()); }
+            public Object run() { return Double.valueOf(evaluate()); }
 
             @Override
             public long runAsLong() { return (long)evaluate(); }
